# Auth-Service

./: .gitignore  docker-compose.yml  pyproject.toml  sample.env
src/: db.py  main.py  settings.py
src/documents/: __init__.py  user.py
src/schemas/: __init__.py  login_form.py  registration_form.py  user.py
src/security/: __init__.py  jwt_handle.py  password_hashing.py
